# fire

./: default_api.d.ts  middleware.ts  package-lock.json  package.json
app/: page.tsx
app/about/: page.tsx
app/contact/: page.tsx
app/login/: page.tsx
app/notice/: page.tsx
app/notice/[id]/: page.tsx
app/notice/write/: page.tsx
app/products/: page.tsx
app/research/: page.tsx
app/services/: page.tsx
hrtem_analyzer/: README.md  hrtem_analyzer.spec  pyproject.toml  requirements-minimal.txt  requirements.txt  run_gui.bat
hrtem_analyzer/config/: __init__.py  settings.py
hrtem_analyzer/installer/: windows_installer.iss
hrtem_analyzer/scripts/: __init__.py  analyze.py  build_executable.py  build_installer.py  install.bat  install.sh  run_gui.py
hrtem_analyzer/src/: __init__.py
hrtem_analyzer/src/core/: __init__.py  advanced_analysis.py  advanced_denoising.py  advanced_edge_fitting.py  baseline_detector.py  dm_loader.py  enhanced_measurer.py  image_loader.py  precision_measurement.py  preprocessor.py  result_exporter.py  scale_bar_detector.py  thickness_measurer.py
hrtem_analyzer/src/deep_learning/: __init__.py  advanced_models.py  advanced_trainer.py  dataset.py  inference.py  models.py  trainer.py
hrtem_analyzer/src/gui/: __init__.py  app.py  main_window.py
hrtem_analyzer/src/gui/dialogs/: __init__.py
hrtem_analyzer/src/gui/resources/: __init__.py
hrtem_analyzer/src/gui/widgets/: __init__.py  fft_viewer.py  file_list.py  image_viewer.py  manual_measurement.py  measurement_table.py  results_panel.py  settings_panel.py  training_panel.py
hrtem_analyzer/src/pipeline/: __init__.py  batch_processor.py  inference_pipeline.py
hrtem_analyzer/src/utils/: __init__.py
hrtem_analyzer/tests/: __init__.py  test_thickness_measurer.py
