[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hrtem-analyzer"
version = "0.1.0"
description = "Automated Critical Dimension measurement for HR-TEM images"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "HR-TEM Analyzer Team"}
]
keywords = ["HR-TEM", "TEM", "image analysis", "critical dimension", "nanotechnology"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Image Processing",
]

dependencies = [
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",
    "tifffile>=2023.8.0",
    "scikit-image>=0.21.0",
    "scipy>=1.11.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "tqdm>=4.65.0",
    "loguru>=0.7.0",
    "joblib>=1.3.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]
gui = [
    "PyQt6>=6.5.0",
    "PyQt6-Qt6>=6.5.0",
]
deep-learning = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "segmentation-models-pytorch>=0.3.3",
    "timm>=0.9.0",
    "albumentations>=1.3.1",
]
all = [
    "hrtem-analyzer[gui,deep-learning]",
]

[project.scripts]
hrtem-analyze = "scripts.analyze:main"
hrtem-gui = "scripts.run_gui:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "config*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100
