[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hrtem-analyzer"
version = "1.0.0"
description = "Advanced HR-TEM Image Analyzer with Precision CD Measurement"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "HR-TEM Analyzer Team"}
]
keywords = ["HR-TEM", "TEM", "image analysis", "critical dimension", "nanotechnology", "semiconductor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",
    "tifffile>=2023.8.0",
    "scipy>=1.11.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "loguru>=0.7.0",
    "joblib>=1.3.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]
gui = [
    "PyQt6>=6.5.0",
    "PyQt6-Qt6>=6.5.0",
]
wavelet = [
    "PyWavelets>=1.4.0",
]
deeplearning = [
    "torch>=2.0.0",
]
full = [
    "hrtem-analyzer[gui,wavelet,deeplearning]",
    "scikit-image>=0.21.0",
]
all = [
    "hrtem-analyzer[gui,wavelet,deeplearning,dev]",
    "scikit-image>=0.21.0",
]

[project.scripts]
hrtem-analyze = "hrtem_analyzer.scripts.analyze:main"

[project.gui-scripts]
hrtem-analyzer = "hrtem_analyzer.scripts.run_gui:main"

[project.urls]
Homepage = "https://github.com/example/hrtem-analyzer"
Documentation = "https://github.com/example/hrtem-analyzer#readme"
Issues = "https://github.com/example/hrtem-analyzer/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "config*", "scripts*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.png", "*.ico"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100
